boilerplate: Update via doc-kit

--- a/doc-kit.conf
+++ b/doc-kit.conf
@@ -1,8 +1,9 @@
 type: docbook5-book
 variant: 
 
-file: 0076016fd595b2cffba058d1f9a19a046957e3a8  .gitignore
-file: 78e9ecb5e545e3d2bd0f81ab1d4632ee292099a5  xml/generic-entities.ent
+file: 483e1d2cbd379866e7907baea767999f1abb0a7e  .gitignore
+file: 388df47b0cd06e9eaad711dfe4c133be2a1ed583  .editorconfig
+file: b17c197187f9e61c2daa39a74ce75d42f15ceb09  xml/generic-entities.ent
 file: e18430714fe3af85fe62bea62b50140d8b5edf5a  xml/network-entities.ent
 file: b7265561df4f1f6f7e108390863b3f25f0ae0f7c  xml/common_intro_support.xml
 file: 678db25fa5a1f62232af7eb8db24fe409b4a11d5  xml/common_intro_convention.xml
