--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,12 @@ max_line_length = 79
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.ent]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [*.adoc]
 indent_style = space
 indent_size = 2
