--- a/doc-kit.conf
+++ b/doc-kit.conf
@@ -1,9 +1,10 @@
 type: docbook5-book
-variant: 
+variant:
 
-file: 0076016fd595b2cffba058d1f9a19a046957e3a8  .gitignore
-file: 78e9ecb5e545e3d2bd0f81ab1d4632ee292099a5  xml/generic-entities.ent
+file: dc865ed00674536288a1e5a78ba07fe138aaabde  .gitignore
+file: c6b4745307e90c9b88905b434cbbaddc54e4541b  .editorconfig
+file: 52057b72aa89089dc36d5edc422a2ecb4c6ca48b  xml/generic-entities.ent
 file: e18430714fe3af85fe62bea62b50140d8b5edf5a  xml/network-entities.ent
-file: b7265561df4f1f6f7e108390863b3f25f0ae0f7c  xml/common_intro_support.xml
+file: 6f13c1c605e11c3499f9d18335e2bdadf6a0c73d  xml/common_intro_support.xml
 file: 678db25fa5a1f62232af7eb8db24fe409b4a11d5  xml/common_intro_convention.xml
-file: 4a7ac53b31ea438e91103a0f2aacb37f8a197b20  xml/common_intro_feedback.xml
+file: bf554272c25b6899d057daab2ebd88eecde6477f  xml/common_intro_feedback.xml
