--- a/doc-kit.conf
+++ b/doc-kit.conf
@@ -1,11 +1,22 @@
 type: docbook5-book
-variant:
+variant: license-gfdl
 
 file: d5aba8356449342d0bac0a62116b85f1b44ee73d  .gitignore
 file: c6b4745307e90c9b88905b434cbbaddc54e4541b  .editorconfig
+file: 8b1be25d0f87bef381565de3a12a413c9bc2ed8c  xml/product-entities.ent
 file: 087cd3de86a5e0d519c86e344fe03b7b8ce39587  xml/generic-entities.ent
 file: a79a3bc929478668955564bab48aecc8502555f6  xml/network-entities.ent
+file: c56ebe2fc1aa5cb56c157ced29c11b881671d8df  DC-example
+file: e2502a91415baa782e5da7ac292911b51f33bfb0  xml/MAIN.book-example.xml
+file: 66e8b8f8f7e7b88ff21d333c07adcc191cc156b2  xml/preface_example.xml
+file: e1105cf34cc726640a040f394dd3f1ea6c08acfd  xml/cha_example_one.xml
+file: 8407fa21b722a4d6d825c766c94df4203a234929  xml/cha_example_two.xml
+file: da39a3ee5e6b4b0d3255bfef95601890afd80709  xml/example_doc_updates.xml
+file: 280cfae1f40eb4a3ef161d1706b3de7043b52d19  images/src/png/example.png
 file: bb1883074f56e583475571647a9b724e5e3b5d3f  xml/common_intro_available_doc.xml
 file: 6b82b8fa32f3c8cd8c76e804e420ae4a9312ec27  xml/common_intro_support.xml
 file: a7dde5524c60c5ea24fa07a9381fd0111e55bae9  xml/common_intro_convention.xml
 file: 2af06d76aa36c3a85968e56e24440d56926cf81b  xml/common_intro_feedback.xml
+file: 9f5f8165bfa8b076d80107d811b89c6c6bded8dd  xml/common_copyright_gfdl.xml
+file: 7022e7485da1b892ea57faf858857981eb3644bc  xml/common_legal.xml
+file: 58a687a6b796c73ec9716f56b2530e52aea24a6c  xml/common_license_gfdl1.2.xml
